// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic tests Render plain table 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <div>
          number
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align:right;white-space:nowrap;width:140px;"
      >
        <div>
          took_office
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div>
          1
        </div>
      </td>
      <td>
        <div>
          George Washington
        </div>
      </td>
      <td>
        <div>
          No Party
        </div>
      </td>
      <td>
        <div>
          1732
        </div>
      </td>
      <td>
        <div>
          1799
        </div>
      </td>
      <td
        style="width:140px;text-align:right;"
      >
        <div>
          1789-04-30
        </div>
      </td>
      <td>
        <div>
          1797-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          2
        </div>
      </td>
      <td>
        <div>
          John Adams
        </div>
      </td>
      <td>
        <div>
          Federalist
        </div>
      </td>
      <td>
        <div>
          1735
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width:140px;text-align:right;"
      >
        <div>
          1797-03-04
        </div>
      </td>
      <td>
        <div>
          1801-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          3
        </div>
      </td>
      <td>
        <div>
          Thomas Jefferson
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1743
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width:140px;text-align:right;"
      >
        <div>
          1801-03-04
        </div>
      </td>
      <td>
        <div>
          1809-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          4
        </div>
      </td>
      <td>
        <div>
          James Madison
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1751
        </div>
      </td>
      <td>
        <div>
          1836
        </div>
      </td>
      <td
        style="width:140px;text-align:right;"
      >
        <div>
          1809-03-04
        </div>
      </td>
      <td>
        <div>
          1817-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          5
        </div>
      </td>
      <td>
        <div>
          James Monroe
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1758
        </div>
      </td>
      <td>
        <div>
          1831
        </div>
      </td>
      <td
        style="width:140px;text-align:right;"
      >
        <div>
          1817-03-04
        </div>
      </td>
      <td>
        <div>
          1825-03-04
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`basic tests Render plain table with custom cellValueComponent 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <div>
          number
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align:right;white-space:nowrap;width:140px;"
      >
        <div>
          took_office
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <span>
          1
        </span>
      </td>
      <td>
        <span>
          George Washington
        </span>
      </td>
      <td>
        <span>
          No Party
        </span>
      </td>
      <td>
        <span>
          1732
        </span>
      </td>
      <td>
        <span>
          1799
        </span>
      </td>
      <td
        style="width:140px;text-align:right;"
      >
        <span>
          1789-04-30
        </span>
      </td>
      <td>
        <span>
          1797-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          2
        </span>
      </td>
      <td>
        <span>
          John Adams
        </span>
      </td>
      <td>
        <span>
          Federalist
        </span>
      </td>
      <td>
        <span>
          1735
        </span>
      </td>
      <td>
        <span>
          1826
        </span>
      </td>
      <td
        style="width:140px;text-align:right;"
      >
        <span>
          1797-03-04
        </span>
      </td>
      <td>
        <span>
          1801-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          3
        </span>
      </td>
      <td>
        <span>
          Thomas Jefferson
        </span>
      </td>
      <td>
        <span>
          Democratic-Republican
        </span>
      </td>
      <td>
        <span>
          1743
        </span>
      </td>
      <td>
        <span>
          1826
        </span>
      </td>
      <td
        style="width:140px;text-align:right;"
      >
        <span>
          1801-03-04
        </span>
      </td>
      <td>
        <span>
          1809-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          4
        </span>
      </td>
      <td>
        <span>
          James Madison
        </span>
      </td>
      <td>
        <span>
          Democratic-Republican
        </span>
      </td>
      <td>
        <span>
          1751
        </span>
      </td>
      <td>
        <span>
          1836
        </span>
      </td>
      <td
        style="width:140px;text-align:right;"
      >
        <span>
          1809-03-04
        </span>
      </td>
      <td>
        <span>
          1817-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          5
        </span>
      </td>
      <td>
        <span>
          James Monroe
        </span>
      </td>
      <td>
        <span>
          Democratic-Republican
        </span>
      </td>
      <td>
        <span>
          1758
        </span>
      </td>
      <td>
        <span>
          1831
        </span>
      </td>
      <td
        style="width:140px;text-align:right;"
      >
        <span>
          1817-03-04
        </span>
      </td>
      <td>
        <span>
          1825-03-04
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`basic tests Render plain table with custom headerComponent 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <span>
          Test
        </span>
      </th>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align:right;white-space:nowrap;width:140px;"
      >
        <div>
          took_office
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <span>
          1
        </span>
      </td>
      <td>
        <span>
          George Washington
        </span>
      </td>
      <td>
        <span>
          No Party
        </span>
      </td>
      <td>
        <span>
          1732
        </span>
      </td>
      <td>
        <span>
          1799
        </span>
      </td>
      <td
        style="width:140px;text-align:right;"
      >
        <span>
          1789-04-30
        </span>
      </td>
      <td>
        <span>
          1797-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          2
        </span>
      </td>
      <td>
        <span>
          John Adams
        </span>
      </td>
      <td>
        <span>
          Federalist
        </span>
      </td>
      <td>
        <span>
          1735
        </span>
      </td>
      <td>
        <span>
          1826
        </span>
      </td>
      <td
        style="width:140px;text-align:right;"
      >
        <span>
          1797-03-04
        </span>
      </td>
      <td>
        <span>
          1801-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          3
        </span>
      </td>
      <td>
        <span>
          Thomas Jefferson
        </span>
      </td>
      <td>
        <span>
          Democratic-Republican
        </span>
      </td>
      <td>
        <span>
          1743
        </span>
      </td>
      <td>
        <span>
          1826
        </span>
      </td>
      <td
        style="width:140px;text-align:right;"
      >
        <span>
          1801-03-04
        </span>
      </td>
      <td>
        <span>
          1809-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          4
        </span>
      </td>
      <td>
        <span>
          James Madison
        </span>
      </td>
      <td>
        <span>
          Democratic-Republican
        </span>
      </td>
      <td>
        <span>
          1751
        </span>
      </td>
      <td>
        <span>
          1836
        </span>
      </td>
      <td
        style="width:140px;text-align:right;"
      >
        <span>
          1809-03-04
        </span>
      </td>
      <td>
        <span>
          1817-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          5
        </span>
      </td>
      <td>
        <span>
          James Monroe
        </span>
      </td>
      <td>
        <span>
          Democratic-Republican
        </span>
      </td>
      <td>
        <span>
          1758
        </span>
      </td>
      <td>
        <span>
          1831
        </span>
      </td>
      <td
        style="width:140px;text-align:right;"
      >
        <span>
          1817-03-04
        </span>
      </td>
      <td>
        <span>
          1825-03-04
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;
